# JRPG_Game_old-rust-project

./: CREDITS.md  Cargo.toml  README.md
campaigns/TestGame/: campaign.yml
campaigns/TestGame/sprite_sheets/: sara.yml
src/: handle_input.rs  main.rs
src/assets/: asset_database.rs  campaign_loader.rs  mod.rs  sprite_sheet.rs
src/assets/audio/: audio_clip.rs  mod.rs  playlist.rs
src/ecs/: animation_system.rs  control_components.rs  gfx_components.rs  mod.rs  player_control_system.rs  position_component.rs  render_system.rs  visible_component.rs
src/game_state/: game_state.rs  main_menu_state.rs  mod.rs  playing_state.rs  state_event.rs  ui_action.rs
